force-app/main/default/objects/Document_Template__c/fields/classID__c.field-meta.xml
<CustomField>
    <fullName>ClassId__c</fullName>
    <label>Related Class Id</label>
    <length>50</length>
    <type>Text</type>
</CustomField>