force-app/main/default/objects/Document_Template__c/fields/FlowId__c.field-meta.xml
<CustomField>
    <fullName>FlowId__c</fullName>
    <label>Related Flow Id</label>
    <length>50</length>
    <type>Text</type>
</CustomField>