force-app/main/default/objects/Document_Template__c/fields/Parent_Template__c.field-meta.xml
<CustomField>
    <fullName>Parent_Template__c</fullName>
    <label>Parent Template</label>
    <length>50</length>
    <type>Text</type>
</CustomField>