force-app/main/default/objects/Document_Template__c/fields/PDF_Page_Properties__c.field-meta.xml
<CustomField>
    <fullName>PDF_Page_Properties__c</fullName>
    <label>PDF Page Properties</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>