force-app/main/default/objects/Document_Template__c/fields/Previously_Active__c.field-meta.xml
<CustomField>
    <fullName>Previously_Active__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Previously Active</label>
    <type>Checkbox</type>
</CustomField>