force-app/main/default/objects/Document_Template__c/fields/Related_To_Type__c.field-meta.xml
<CustomField>
    <fullName>Related_To_Type__c</fullName>
    <label>Related To Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Opportunity</fullName>
            </value>
            <value>
                <fullName>Account</fullName>
            </value>
            <value>
                <fullName>Asset</fullName>
                <isActive>false</isActive>
                <label>Asset</label>
            </value>
            <value>
                <fullName>Contract</fullName>
                <isActive>false</isActive>
                <label>Contract</label>
            </value>
            <value>
                <fullName>Order</fullName>
                <isActive>false</isActive>
                <label>Order</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>