force-app/main/default/objects/Document_Template__c/fields/Watermark_Data__c.field-meta.xml
<CustomField>
    <fullName>Watermark_Data__c</fullName>
    <label>Watermark Data</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>